Fixed OutOfMemoryException when loading large textures and added API for modifying texture pixels